--- a/src/containers/Main.scss
+++ b/src/containers/Main.scss
@@ -2,6 +2,6 @@
 
 .dark-mode {
   background-color: $darkBackground;
-  color: white;
-  transition: "0.1s";
+  color: white !important;
+  transition: "0.1s" !important;
 }
